ndb - bug#46412   Fix/handle incorrectly set lcp-bits during system restart