storage/ndb/src/kernel/blocks/dbdih/Dbdih.hpp
@@ -889,7 +889,7 @@ private:
   void calculateHotSpare();
   void checkEscalation();
   void clearRestartInfoBits(Signal *);
-  void invalidateLcpInfoAfterSr();
+  void invalidateLcpInfoAfterSr(Signal*);
 
   bool isMaster();
   bool isActiveMaster();
@@ -914,7 +914,7 @@ private:
   void setNodeGroups();
   void setNodeInfo(Signal *);
   void setNodeLcpActiveStatus();
-  void setNodeRestartInfoBits();
+  void setNodeRestartInfoBits(Signal*);
   void startGcp(Signal *);
   void startGcpMonitor(Signal*);
 
